Modal popup_engineer show/hide

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col-md-2 col-sm-3 col-xs-12">
            <div class="header_btn_wrap">
              <div class="header_btn_wrap_block">
-               <button class="header_btn text-uppercase text-left popup_engineer_btn">
+               <button class="header_btn text-uppercase text-left popup_engineer_btn" id="">
                    Вызвать <br>замерщика
                </button>
              </div>
