--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
     <!-- Request a call -->
     <div class="popup display-none">
         <div class="popup_dialog">
-            <div class="popup_content text-center">
+            <div class="popup_content text-center animated fadeIn">
                 <button type="button" class="popup_close"><strong>&times;</strong></button>
                 <div class="popup_form">
                     <form class="form" action="#">
@@ -821,7 +821,7 @@
     <!-- Request an engineer -->
     <div class="popup_engineer display-none">
         <div class="popup_dialog">
-            <div class="popup_content text-center">
+            <div class="popup_content text-center animated fadeIn">
                 <button type="button" class="popup_close"><strong>&times;</strong></button>
                 <div class="popup_form">
                     <form class="form" action="#">
@@ -839,7 +839,7 @@
     <!-- Calculator -->
    <div class="popup_calc display-none">
         <div class="popup_dialog">
-            <div class="popup_calc_content text-center">
+            <div class="popup_calc_content text-center animated fadeIn">
                 <button type="button" class="popup_calc_close"><strong>&times;</strong></button>
                  <h2>Калькулятор</h2>
                 <h3>Выберите форму балкона <br>и укажите размеры</h3>
@@ -871,7 +871,7 @@
 
    <div class="popup_calc_profile display-none">
         <div class="popup_dialog">
-            <div class="popup_calc_profile_content text-center">
+            <div class="popup_calc_profile_content text-center animated fadeIn">
                 <button type="button" class="popup_calc_profile_close"><strong>&times;</strong></button>
                  <h2>Калькулятор</h2>
                  <h3>Выберите тип остекления <br>и его профиль</h3>
@@ -902,7 +902,7 @@
 
     <div class="popup_calc_end display-none">
         <div class="popup_dialog">
-            <div class="popup_content text-center">
+            <div class="popup_content text-center animated fadeIn">
                 <button type="button" class="popup_calc_end_close"><strong>&times;</strong></button>
                 <div class="popup_form">
                     <form class="form" action="#">
