--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/animate.min.css">
   </head>
 
-  <body class="overflow-auto">
+  <body>
     <header class="header">
       <div class="container">
         <div class="row">
@@ -132,7 +132,7 @@
 
         <!-- Slider -->
         <div class="glazing_slider">
-          <div class="glazing_block text-center wow fadeInUp">
+          <div class="glazing_block text-center wow fadeInUp active">
             <img src="img/glazing/icons/1.png" alt="#">
             <a class="tree_link">Деревянное <br>остекление</a>
           </div>
@@ -155,7 +155,7 @@
         </div>
 
         <!-- Tree -->
-        <div class="row tree">
+        <div class="row treeanimated fadeIn animated fadeIn ">
 
           <div class="col-md-6 no-padding">
            <div class="glazing_cold">
@@ -194,7 +194,7 @@
         </div> <!-- /Tree -->
 
         <!-- Aluminum -->
-        <div class="row aluminum">
+        <div class="row aluminum animated fadeIn display-none">
 
           <div class="col-md-6 no-padding">
            <div class="glazing_cold">
@@ -233,7 +233,7 @@
         </div> <!-- /Aluminum -->
 
         <!-- Plastic -->
-        <div class="row plastic">
+        <div class="row plastic animated fadeIn display-none">
 
           <div class="col-md-6 col-md-offset-3 no-padding">
             <div class="glazing_warm">
@@ -255,7 +255,7 @@
         </div> <!-- /Plastic -->
 
         <!-- French -->
-        <div class="row french">
+        <div class="row french animated fadeIn display-none">
 
           <div class="col-md-6 no-padding">
            <div class="glazing_cold">
@@ -294,7 +294,7 @@
         </div> <!-- /French -->
 
         <!-- Rise -->
-        <div class="row rise">
+        <div class="row rise animated fadeIn display-none">
 
           <div class="col-md-6 no-padding">
            <div class="glazing_cold">
