--- a/index.html
+++ b/index.html
@@ -712,14 +712,14 @@
         <div class="row">
           <div class="col-lg-5 col-md-6 wow fadeInLeft">
             <h2 class="sale_title">Акция - 60%</h2>
-            <p class="sale_subtitle">Успей сэкономить на остеклении! Только до 18 декабря!</p>
+            <p class="sale_subtitle">Успей сэкономить на остеклении! Только до 04 июля!</p>
             <div class="timer1" id="timer">
                 <p><h4>ДО ЗАВЕРШЕНИЯ АКЦИИ:</h4></p>
                 <div class="container1">
-                  <div class="numbers1"><div ><span id="days">08</span></div><div class="description1">Дней</div></div>
-                  <div class="numbers1"><div ><span id="hours">18</span></div><div class="description1">Часов</div></div>
-                  <div class="numbers1"><div id="minutes"><span>33</span></div><div class="description1">Минут</div></div>
-                  <div class="numbers1"><div id="seconds"><span>44</span></div><div class="description1">Секунд</div></div>      
+                  <div class="numbers1"><div ><span id="days">20</span></div><div class="description1">Дней</div></div>
+                  <div class="numbers1"><div ><span id="hours">10</span></div><div class="description1">Часов</div></div>
+                  <div class="numbers1"><div><span id="minutes">9</span></div><div class="description1">Минут</div></div>
+                  <div class="numbers1"><div><span id="seconds">8</span></div><div class="description1">Секунд</div></div>      
                 </div>
               </div>
           </div>
