Added calc. Now without send

--- a/index.html
+++ b/index.html
@@ -855,9 +855,9 @@
                </div>
                 <div class="big_img text-center">
                   <img src="img/modal_calc/balkon/type1.png" alt="" id="type1">
-                  <img src="img/modal_calc/balkon/type2.png" alt="" id="type2">
-                  <img src="img/modal_calc/balkon/type3.png" alt="" id="type3">
-                  <img src="img/modal_calc/balkon/type4.png" alt="" id="type4">
+                  <img class="display-none" src="img/modal_calc/balkon/type2.png" alt="" id="type2">
+                  <img class="display-none" src="img/modal_calc/balkon/type3.png" alt="" id="type3">
+                  <img class="display-none" src="img/modal_calc/balkon/type4.png" alt="" id="type4">
                 </div>
                 <input class="form-control" id="width" type="text" placeholder="Ширина" required>
                 <label for="width">мм</label>
@@ -884,13 +884,13 @@
                  </select>
                  <img src="img/modal_calc/icon_cold.png" alt="">
                  <label>
-                     <input class="checkbox" type="checkbox" name="checkbox-test">
+                     <input class="checkbox" type="checkbox" name="checkbox-test" id="profile__cold">
                      <span class="checkbox-custom" id="cold"></span>
                      <span class="label">Холодное</span>
                  </label>
                  <img src="img/modal_calc/icon_warm.png" alt="">
                  <label>
-                     <input class="checkbox" type="checkbox" name="checkbox-test">
+                     <input class="checkbox" type="checkbox" name="checkbox-test" id="profile__warm">
                      <span class="checkbox-custom" id="warm"></span>
                      <span class="label">Теплое</span>
                  </label>
